# Projecteur

./: .gitignore  Notebook_Clothilde.ipynb  README.md  app.py  conv_history.json  crawler.py  database.py  eval_qa.py  eval_results_run.json  film_parser.py  films.db-shm  films.db-wal  films_old.db  generator.py  main.ipynb  main.py  movies_list.json  my_secrets.py  project_secrets.py  pyproject.toml  rapport.tex  requirements.txt  retriever.py  router.py
chroma_db/0f0e749e-2f5d-48a3-bcc9-fd4c4b28a6a5/: index_metadata.pickle
chroma_db/60e1eae5-d3d5-469e-8301-a09f065a60fa/: index_metadata.pickle
chroma_db/aa6be221-8449-4c7f-9dfe-8219a33fef0a/: index_metadata.pickle
fichiers/: conv_history.json  eval_results_run.json
rapport/: rapport.aux  rapport.fdb_latexmk  rapport.fls  rapport.ist  rapport.out  rapport.tex  rapport.toc
