[project]
name = "rag-lo17"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "genai>=1.0.3",
    "langchain==0.1.1",
    "langchain-community==0.0.19",
    "langchain-core==0.1.23",
    "langchain-google-genai==0.0.6",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tiktoken>=0.6.0",
    "wikipedia>=1.4.0",
]
